# mental_health_application_v2

./: pyproject.toml  readme.MD
fine-tuning/: apptest.ipynb
fine-tuning/src/fine_tuning_data_pairs/: hotline_functions.json
mental_health_chat/: db.sqlite3  manage.py
mental_health_chat/chatbot/: urls.py  views.py
mental_health_chat/chatbot/templates/: chat.html
mental_health_chat/mental_health_chat/: asgi.py  settings.py  urls.py  wsgi.py
raw_mental_health_dataset/: state.json
src/: apptest.ipynb  config.json
src/src/fine_tuning_data_pairs/: train.jsonl  validation.jsonl
